[workspace]
members = ["wasm/module"]
default-members = ["wasm/module"]

[package]
name = "envoy-sample-access-logger"
description = "Sample Envoy Access logger"
version = "0.1.0"
edition = "2018"
keywords = ["envoy", "extension", "wasm", "access-logger"]
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib"]

[dependencies]
envoy-sdk = { git = "ssh://git@github.com/tetratelabs/envoy-wasm-rust-sdk.git" }
proxy-wasm = { git = "https://github.com/yskopets/proxy-wasm-rust-sdk", branch = "proxy-wasm-spec-0.1.0" }
log = "^0.4"
chrono = "^0.4"
