[package]
name = "envoy-sample-access-logger-module"
description = "Sample Envoy Access logger (Wasm module)"
version = "0.1.0"
edition = "2018"
keywords = ["envoy", "extension", "wasm", "access-logger"]
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "extension"
crate-type = ["cdylib"]

[dependencies]
envoy-sample-access-logger = { path = "../.." }
envoy = { package = "envoy-sdk", version = "^0.1" }
