[package]
name = "envoy-sample-network-filter-module"
description = "Sample Envoy Network filter (Wasm module)"
version = "0.0.0"
authors = ["Tetrate Labs <tetratelabs@tetrate.io>"]
edition = "2018"
keywords = ["envoy", "extension", "wasm", "network-filter"]
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "extension"
crate-type = ["cdylib"]

[dependencies]
envoy-sample-network-filter = { path = "../.." }
envoy-sdk = { git = "ssh://git@github.com/tetratelabs/envoy-wasm-rust-sdk.git" }
proxy-wasm = { git = "https://github.com/yskopets/proxy-wasm-rust-sdk", branch = "proxy-wasm-spec-0.1.0" }
log = "^0.4"
