[package]
name = "envoy-sample-network-filter-module"
description = "Sample Envoy Network filter (Wasm module)"
version = "0.1.0"
edition = "2018"
keywords = ["envoy", "extension", "wasm", "network-filter"]
categories = ["wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "extension"
crate-type = ["cdylib"]

[dependencies]
envoy-sample-network-filter = { path = "../.." }
envoy = { package = "envoy-sdk", version = "^0.0.5" }
